--- a/src/Limitless/KarhabtiBundle/Resources/views/AvisMoniteur/affichageAvis.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/AvisMoniteur/affichageAvis.html.twig
@@ -4,8 +4,12 @@
     {{ parent() }}
 {% endblock %}
 {% block body %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/starrating/css/rating.css') }}"/>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="{{ asset('bundles/starrating/js/rating.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/font-awesome/css/font-awesome.min.css') }}"/>
     <!-- Header 1
- ============================================ -->
+     ============================================ -->
     <div class="header-bottom-2 sticky">
         <div class="container">
             <div class="row">
@@ -20,10 +24,10 @@
                         <nav>
                             <ul>
                                 <li ><a href="{{ path('limitless_karhabti_Moniteur_homepage') }}">home</a></li>
-                                <li class="active"><a href="{{ path('moniteur_index') }}">Profil</a></li>
-                                <li><a href="{{ path('moniteur_tache_index') }}">Planning</a></li>
-                                <li><a href="{{ path('moniteur_agence_index') }}">Agences</a></li>
-                                <li><a href="{{ path('AffichageAvis') }}">Mes Avis</a></li>
+                                <li ><a href="{{ path('moniteur_index') }}">Profil</a></li>
+                                <li ><a href="{{ path('moniteur_tache_index') }}">Planning</a></li>
+                                <li ><a href="{{ path('moniteur_agence_index') }}">Agences</a></li>
+                                <li class="active"><a href="{{ path('AffichageAvis') }}">Mes Avis</a></li>
                                 <li><a href="{{ path('limitless_karhabti_mail_moniteur') }}">contact</a></li>
                             </ul>
                         </nav>
@@ -52,7 +56,7 @@
             <!-- Section Title -->
             <div class="row">
                 <div class="section-title text-center col-xs-12 mb-45">
-                    <h3 class="heading">Modifier Votre compte</h3>
+                    <h3 class="heading">Liste des notes</h3>
 
                     <i class="icofont icofont-traffic-light"></i>
                 </div>
@@ -74,59 +78,36 @@
                             line-height: 30px;
                         }
                     </style>
+                    <ul>
+                        <li style="text-align: center">
+                            <button><a class="btn color " href="{{ path('AjoutAvis') }}">Noter un client</a></button>
+                        </li>
+                    </ul>
+                    <table class="table" style="width: 100%;margin-top: 3%;" >
+                        <thead class="thead-inverse" style="text-align: center">
+                        <tr>
+                            <th style="width: 25%"><h3>Client</h3></th>
+                            <th style="width: 25%"><h3>Contenu</h3></th>
+                            <th style="width: 25%"><h3>Rating</h3></th>
+                            <th style="text-align: center;width: 25%;"><h3>Action</h3></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for x in avis %}
+                            <tr>
+                                <td style="width: 25%">{{ x.client.nom }}</td>
+                                <td style="width: 25%">{{ x.contenu }}</td>
+                                <td style="width: 25%">{{ x.rating|rating }}</td>
+                                <td style="text-align: center;width: 25%;">
+                                    <a class="btn color" href="{{ path('UpdateAvis',{id:x.id}) }}">Modifier</a>
+                                    <a class="btn color" href="{{ path('DeleteAvis',{id:x.id}) }}">Supprimer</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
 
 
-                    {{ form_start(form) }}
-
-                    <div class="input-2">
-                        <div class="input">
-                            <h3 class="panel-title">Civilite</h3>
-                            {{ form_widget(form.civilite) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Nom</h3>
-                            {{ form_widget(form.nom) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Prenom</h3>
-                            {{ form_widget(form.prenom) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Date de naissance</h3>
-                            {{ form_widget(form.dateNaissance) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Lieu de naissance</h3>
-                            {{ form_widget(form.lieuNaissance) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">E-mail</h3>
-                            {{ form_widget(form.mail) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Telephone</h3>
-                            {{ form_widget(form.telephone) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Adresse</h3>
-                            {{ form_widget(form.adresse) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Ville</h3>
-                            {{ form_widget(form.ville) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">Code Postal</h3>
-                            {{ form_widget(form.codePostal) }}
-                        </div>
-
-
-                    </div>
-
-
-                    <div style="text-align: right" class="input input-submit"><input type="submit" value="Valider"/>
-                    </div>
-                    {{ form_end(form) }}
                     <p class="form-messege"></p>
                 </div>
             </div>
