--- a/src/Limitless/KarhabtiBundle/Resources/views/Moniteur/new.html.twig
+++ b/src/Limitless/KarhabtiBundle/Resources/views/Moniteur/new.html.twig
@@ -19,12 +19,12 @@
                     <div class="main-menu menu-style-6 mean-menu float-right">
                         <nav>
                             <ul>
-                                <li ><a href="{{ path('limitless_karhabti_Moniteur_homepage') }}">home</a></li>
+                                <li ><a href="#">home</a></li>
                                 <li class="active"><a href="{{ path('moniteur_index') }}">Profil</a></li>
-                                <li><a href="{{ path('moniteur_tache_index') }}">Planning</a></li>
-                                <li><a href="{{ path('moniteur_agence_index') }}">Agences</a></li>
-                                <li><a href="{{ path('AffichageAvis') }}">Mes Avis</a></li>
-                                <li><a href="{{ path('limitless_karhabti_mail_moniteur') }}">contact</a></li>
+                                <li><a href="#">Planning</a></li>
+                                <li><a href="#}">Agences</a></li>
+                                <li><a href="#">Mes Avis</a></li>
+                                <li><a href="#">contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -52,7 +52,7 @@
             <!-- Section Title -->
             <div class="row">
                 <div class="section-title text-center col-xs-12 mb-45">
-                    <h3 class="heading">Modifier Votre compte</h3>
+                    <h3 class="heading">Créer Votre compte</h3>
 
                     <i class="icofont icofont-traffic-light"></i>
                 </div>
@@ -96,16 +96,16 @@
                             {{ form_widget(form.dateNaissance) }}
                         </div>
                         <div class="input">
-                            <h3 class="panel-title">Lieu de naissance</h3>
+                            <h3 class="panel-title">Ville de naissance</h3>
                             {{ form_widget(form.lieuNaissance) }}
-                        </div>
-                        <div class="input">
-                            <h3 class="panel-title">E-mail</h3>
-                            {{ form_widget(form.mail) }}
                         </div>
                         <div class="input">
                             <h3 class="panel-title">Telephone</h3>
                             {{ form_widget(form.telephone) }}
+                        </div>
+                        <div class="input">
+                            <h3 class="panel-title">E-mail</h3>
+                            {{ form_widget(form.mail) }}
                         </div>
                         <div class="input">
                             <h3 class="panel-title">Adresse</h3>
@@ -118,6 +118,10 @@
                         <div class="input">
                             <h3 class="panel-title">Code Postal</h3>
                             {{ form_widget(form.codePostal) }}
+                        </div>
+                        <div class="input">
+                            <h3 class="panel-title">Image</h3>
+                            {{ form_widget(form.file) }}
                         </div>
 
 
